// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX btMRNz"
    disabled={true}
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL bHwAbj"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX btMRNz"
    disabled={true}
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL icTezo"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX btMRNz"
    disabled={true}
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL gLuXgD"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL koGemx"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR jatpWO"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL kmCJIG"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR jatpWO"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL ilSiNt"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR jatpWO"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL bHwAbj"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL icTezo"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL gLuXgD"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL bHwAbj"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL icTezo"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL gLuXgD"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL bHwAbj"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL icTezo"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL gLuXgD"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
      dir="rtl"
    >
      medium
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL bHwAbj"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg jhVcK"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <label
      className="sc-gmSHEY coDCGe"
      dir="rtl"
    >
      large
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL icTezo"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg jhVcK"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL gLuXgD"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-glUVip fQRjhM"
      >
        xlarge
      </label>
      <div
        className="sc-jKzugg jhVcK"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL bHwAbj"
        placeholder="medium"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL icTezo"
        placeholder="large"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL eGpHkK"
        placeholder="xlarge"
        type="password"
      />
      <label
        className="sc-glUVip fKjLAb"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX bDEkCi"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL ehZpaE"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX bDEkCi"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <div
      className="sc-jNrqiC edxHQS"
    >
      <input
        className="sc-goMRkL gwPuTn"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX bDEkCi"
  >
    <div
      className="sc-jNrqiC hjjcDo"
    >
      <input
        className="sc-goMRkL gmNPY"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
      <div
        className="sc-jKzugg knLYzt"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
